fix(ExpandableSection): made animation opt-in for detached variant

--- a/src/patternfly/components/ExpandableSection/expandable-section.hbs
+++ b/src/patternfly/components/ExpandableSection/expandable-section.hbs
@@ -1,5 +1,6 @@
 <div class="{{pfv}}expandable-section
   {{~#if expandable-section--IsExpanded}} pf-m-expanded{{/if}}
+  {{~#if expandable-section--IsDetached}} pf-m-detached{{/if}}
   {{~#if expandable-section--IsDisplayLg}} pf-m-display-lg pf-m-limit-width{{/if}}
   {{~#if expandable-section--IsIndented}} pf-m-indented{{/if}}
   {{~#if expandable-section--IsTruncate}} pf-m-truncate{{/if}}
