feat(high-contrast): add support for high contrast theme

--- a/src/patternfly/base/tokens/tokens-default.scss
+++ b/src/patternfly/base/tokens/tokens-default.scss
@@ -1,11 +1,12 @@
 
 // Do not edit directly
-// Generated on Mon, 23 Sep 2024 22:48:17 GMT
+// Generated on Thu, 29 May 2025 01:58:23 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--500: rgba(21, 21, 21, 0.2000);
   --pf-t--global--background--color--600: rgba(199, 199, 199, 0.2500);
   --pf-t--global--background--color--action--plain--default: rgba(255, 255, 255, 0.0000);
+  --pf-t--global--border--color--high-contrast: rgba(255, 255, 255, 0.0000);
   --pf-t--global--border--radius--0: 0px;
   --pf-t--global--border--radius--100: 4px;
   --pf-t--global--border--radius--200: 6px;
@@ -15,6 +16,7 @@
   --pf-t--global--border--width--100: 1px;
   --pf-t--global--border--width--200: 2px;
   --pf-t--global--border--width--300: 3px;
+  --pf-t--global--border--width--400: 4px;
   --pf-t--global--box-shadow--X--100: -10px;
   --pf-t--global--box-shadow--X--200: -4px;
   --pf-t--global--box-shadow--X--300: -1px;
@@ -51,6 +53,10 @@
   --pf-t--global--breakpoint--500: 75rem;
   --pf-t--global--breakpoint--550: 80rem;
   --pf-t--global--breakpoint--600: 90.625rem;
+  --pf-t--global--color--nonstatus--green--400: #3d7019;
+  --pf-t--global--color--status--danger--300: #501600;
+  --pf-t--global--color--status--success--150: #3d7019;
+  --pf-t--global--color--status--success--300: #153300;
   --pf-t--global--delay--100: 0ms;
   --pf-t--global--delay--200: 50ms;
   --pf-t--global--delay--300: 100ms;
@@ -120,6 +126,7 @@
   --pf-t--global--border--color--100: var(--pf-t--color--gray--30);
   --pf-t--global--border--color--200: var(--pf-t--color--gray--40);
   --pf-t--global--border--color--300: var(--pf-t--color--gray--50);
+  --pf-t--global--border--color--450: var(--pf-t--color--gray--60);
   --pf-t--global--border--color--50: var(--pf-t--color--gray--20);
   --pf-t--global--border--radius--large: var(--pf-t--global--border--radius--400);
   --pf-t--global--border--radius--medium: var(--pf-t--global--border--radius--300);
@@ -203,56 +210,87 @@
   --pf-t--global--color--brand--100: var(--pf-t--color--blue--40);
   --pf-t--global--color--brand--200: var(--pf-t--color--blue--50);
   --pf-t--global--color--brand--300: var(--pf-t--color--blue--60);
+  --pf-t--global--color--brand--400: var(--pf-t--color--blue--70);
+  --pf-t--global--color--brand--500: var(--pf-t--color--blue--80);
   --pf-t--global--color--disabled--100: var(--pf-t--color--gray--30);
   --pf-t--global--color--disabled--200: var(--pf-t--color--gray--40);
   --pf-t--global--color--disabled--300: var(--pf-t--color--gray--60);
   --pf-t--global--color--favorite--100: var(--pf-t--color--yellow--30);
   --pf-t--global--color--favorite--200: var(--pf-t--color--yellow--40);
+  --pf-t--global--color--favorite--300: var(--pf-t--color--yellow--70);
+  --pf-t--global--color--favorite--400: var(--pf-t--color--yellow--80);
   --pf-t--global--color--nonstatus--blue--100: var(--pf-t--color--blue--20);
   --pf-t--global--color--nonstatus--blue--200: var(--pf-t--color--blue--30);
   --pf-t--global--color--nonstatus--blue--300: var(--pf-t--color--blue--40);
+  --pf-t--global--color--nonstatus--blue--400: var(--pf-t--color--blue--60);
+  --pf-t--global--color--nonstatus--blue--500: var(--pf-t--color--blue--70);
   --pf-t--global--color--nonstatus--gray--100: var(--pf-t--color--gray--20);
   --pf-t--global--color--nonstatus--gray--200: var(--pf-t--color--gray--30);
   --pf-t--global--color--nonstatus--gray--300: var(--pf-t--color--gray--40);
+  --pf-t--global--color--nonstatus--gray--400: var(--pf-t--color--gray--60);
+  --pf-t--global--color--nonstatus--gray--50: var(--pf-t--color--gray--10);
+  --pf-t--global--color--nonstatus--gray--500: var(--pf-t--color--gray--70);
   --pf-t--global--color--nonstatus--green--100: var(--pf-t--color--green--20);
   --pf-t--global--color--nonstatus--green--200: var(--pf-t--color--green--30);
   --pf-t--global--color--nonstatus--green--300: var(--pf-t--color--green--40);
+  --pf-t--global--color--nonstatus--green--500: var(--pf-t--color--green--70);
   --pf-t--global--color--nonstatus--orange--100: var(--pf-t--color--orange--20);
   --pf-t--global--color--nonstatus--orange--200: var(--pf-t--color--orange--30);
   --pf-t--global--color--nonstatus--orange--300: var(--pf-t--color--orange--40);
+  --pf-t--global--color--nonstatus--orange--400: var(--pf-t--color--orange--60);
+  --pf-t--global--color--nonstatus--orange--500: var(--pf-t--color--orange--70);
   --pf-t--global--color--nonstatus--orangered--100: var(--pf-t--color--red-orange--20);
   --pf-t--global--color--nonstatus--orangered--200: var(--pf-t--color--red-orange--30);
   --pf-t--global--color--nonstatus--orangered--300: var(--pf-t--color--red-orange--40);
+  --pf-t--global--color--nonstatus--orangered--400: var(--pf-t--color--red-orange--60);
+  --pf-t--global--color--nonstatus--orangered--500: var(--pf-t--color--red-orange--70);
   --pf-t--global--color--nonstatus--purple--100: var(--pf-t--color--purple--20);
   --pf-t--global--color--nonstatus--purple--200: var(--pf-t--color--purple--30);
   --pf-t--global--color--nonstatus--purple--300: var(--pf-t--color--purple--40);
+  --pf-t--global--color--nonstatus--purple--400: var(--pf-t--color--purple--50);
+  --pf-t--global--color--nonstatus--purple--500: var(--pf-t--color--purple--60);
   --pf-t--global--color--nonstatus--red--100: var(--pf-t--color--red--20);
   --pf-t--global--color--nonstatus--red--200: var(--pf-t--color--red--30);
   --pf-t--global--color--nonstatus--red--300: var(--pf-t--color--red--40);
+  --pf-t--global--color--nonstatus--red--400: var(--pf-t--color--red--60);
+  --pf-t--global--color--nonstatus--red--500: var(--pf-t--color--red--70);
   --pf-t--global--color--nonstatus--teal--100: var(--pf-t--color--teal--20);
   --pf-t--global--color--nonstatus--teal--200: var(--pf-t--color--teal--30);
   --pf-t--global--color--nonstatus--teal--300: var(--pf-t--color--teal--40);
+  --pf-t--global--color--nonstatus--teal--400: var(--pf-t--color--teal--70);
+  --pf-t--global--color--nonstatus--teal--500: var(--pf-t--color--teal--80);
   --pf-t--global--color--nonstatus--yellow--100: var(--pf-t--color--yellow--20);
   --pf-t--global--color--nonstatus--yellow--200: var(--pf-t--color--yellow--30);
   --pf-t--global--color--nonstatus--yellow--300: var(--pf-t--color--yellow--40);
+  --pf-t--global--color--nonstatus--yellow--400: var(--pf-t--color--yellow--70);
+  --pf-t--global--color--nonstatus--yellow--500: var(--pf-t--color--yellow--80);
   --pf-t--global--color--severity--critical--100: var(--pf-t--color--red-orange--60);
   --pf-t--global--color--severity--important--100: var(--pf-t--color--orange--50);
+  --pf-t--global--color--severity--important--200: var(--pf-t--color--orange--60);
   --pf-t--global--color--severity--minor--100: var(--pf-t--color--gray--50);
+  --pf-t--global--color--severity--minor--200: var(--pf-t--color--gray--80);
   --pf-t--global--color--severity--moderate--100: var(--pf-t--color--yellow--40);
+  --pf-t--global--color--severity--moderate--200: var(--pf-t--color--yellow--70);
   --pf-t--global--color--severity--none--100: var(--pf-t--color--blue--40);
+  --pf-t--global--color--severity--none--200: var(--pf-t--color--blue--60);
   --pf-t--global--color--severity--undefined--100: var(--pf-t--color--gray--30);
+  --pf-t--global--color--severity--undefined--200: var(--pf-t--color--gray--60);
   --pf-t--global--color--status--custom--100: var(--pf-t--color--teal--60);
   --pf-t--global--color--status--custom--200: var(--pf-t--color--teal--70);
+  --pf-t--global--color--status--custom--300: var(--pf-t--color--teal--80);
   --pf-t--global--color--status--danger--100: var(--pf-t--color--red-orange--60);
   --pf-t--global--color--status--danger--200: var(--pf-t--color--red-orange--70);
-  --pf-t--global--color--status--danger--300: var(--pf-t--color--red-orange--70);
   --pf-t--global--color--status--info--100: var(--pf-t--color--purple--50);
   --pf-t--global--color--status--info--200: var(--pf-t--color--purple--60);
+  --pf-t--global--color--status--info--300: var(--pf-t--color--purple--70);
   --pf-t--global--color--status--success--100: var(--pf-t--color--green--60);
   --pf-t--global--color--status--success--200: var(--pf-t--color--green--70);
   --pf-t--global--color--status--warning--100: var(--pf-t--color--yellow--30);
   --pf-t--global--color--status--warning--200: var(--pf-t--color--yellow--40);
   --pf-t--global--color--status--warning--300: var(--pf-t--color--yellow--50);
+  --pf-t--global--color--status--warning--400: var(--pf-t--color--yellow--60);
+  --pf-t--global--color--status--warning--500: var(--pf-t--color--yellow--70);
+  --pf-t--global--color--status--warning--600: var(--pf-t--color--yellow--80);
   --pf-t--global--font--family--body: var(--pf-t--global--font--family--100);
   --pf-t--global--font--family--heading: var(--pf-t--global--font--family--200);
   --pf-t--global--font--family--mono: var(--pf-t--global--font--family--300);
@@ -271,6 +309,7 @@
   --pf-t--global--font--weight--heading--bold: var(--pf-t--global--font--weight--400);
   --pf-t--global--font--weight--heading--default: var(--pf-t--global--font--weight--300);
   --pf-t--global--icon--color--100: var(--pf-t--color--gray--90);
+  --pf-t--global--icon--color--150: var(--pf-t--color--gray--60);
   --pf-t--global--icon--color--200: var(--pf-t--color--gray--50);
   --pf-t--global--icon--color--300: var(--pf-t--color--white);
   --pf-t--global--icon--size--2xl: var(--pf-t--global--icon--size--400);
@@ -303,11 +342,15 @@
   --pf-t--global--spacer--xs: var(--pf-t--global--spacer--100);
   --pf-t--global--text--color--100: var(--pf-t--color--gray--95);
   --pf-t--global--text--color--200: var(--pf-t--color--gray--60);
+  --pf-t--global--text--color--250: var(--pf-t--color--gray--70);
   --pf-t--global--text--color--300: var(--pf-t--color--white);
   --pf-t--global--text--color--400: var(--pf-t--color--red-orange--40);
+  --pf-t--global--text--color--500: var(--pf-t--color--red-orange--70);
   --pf-t--global--text--color--link--100: var(--pf-t--color--blue--50);
   --pf-t--global--text--color--link--200: var(--pf-t--color--blue--60);
+  --pf-t--global--text--color--link--250: var(--pf-t--color--blue--70);
   --pf-t--global--text--color--link--300: var(--pf-t--color--purple--50);
+  --pf-t--global--text--color--link--350: var(--pf-t--color--purple--60);
   --pf-t--global--text-decoration--editable-text--line--default: var(--pf-t--global--text-decoration--line--200);
   --pf-t--global--text-decoration--editable-text--line--hover: var(--pf-t--global--text-decoration--line--200);
   --pf-t--global--text-decoration--editable-text--style--default: var(--pf-t--global--text-decoration--style--200);
