--- a/src/patternfly/base/patternfly-variables.scss
+++ b/src/patternfly/base/patternfly-variables.scss
@@ -2,6 +2,8 @@
 @use "./tokens/tokens-palette" as palette;
 @use "./tokens/tokens-default" as default;
 @use "./tokens/tokens-dark" as dark;
+@use "./tokens/tokens-highcontrast" as highcontrast;
+@use "./tokens/tokens-highcontrast-dark" as highcontrast-dark;
 @use "./tokens/tokens-local" as local;
 
 :root {
@@ -13,6 +15,26 @@
 
 :root:where(.pf-v6-theme-dark) {
   @include dark.pf-v6-tokens;
+}
+
+// :root:where(.pf-v6-theme-high-contrast) {
+//   @include highcontrast.pf-v6-tokens;
+// }
+
+@media (prefers-contrast: more) {
+  :root {
+    @include highcontrast.pf-v6-tokens;
+  }
+}
+
+// :root:where(.pf-v6-theme-high-contrast.pf-v6-theme-dark) {
+//   @include highcontrast-dark.pf-v6-tokens;
+// }
+
+@media (prefers-contrast: more) {
+  :root:where(.pf-v6-theme-dark) {
+    @include highcontrast-dark.pf-v6-tokens;
+  }
 }
 
 @include pf-v6-rtl(false) {
