--- a/src/patternfly/base/tokens/tokens-palette.scss
+++ b/src/patternfly/base/tokens/tokens-palette.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 23 Sep 2024 22:48:17 GMT
+// Generated on Thu, 29 May 2025 01:58:24 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--color--black: #000000;
@@ -11,6 +11,7 @@
   --pf-t--color--blue--50: #0066cc;
   --pf-t--color--blue--60: #004d99;
   --pf-t--color--blue--70: #003366;
+  --pf-t--color--blue--80: #002250;
   --pf-t--color--gray--10: #f2f2f2;
   --pf-t--color--gray--20: #e0e0e0;
   --pf-t--color--gray--30: #c7c7c7;
@@ -35,6 +36,7 @@
   --pf-t--color--orange--50: #ca6c0f;
   --pf-t--color--orange--60: #9e4a06;
   --pf-t--color--orange--70: #732e00;
+  --pf-t--color--orange--80: #4d1f00;
   --pf-t--color--purple--10: #ece6ff;
   --pf-t--color--purple--20: #d0c5f4;
   --pf-t--color--purple--30: #b6a6e9;
@@ -42,6 +44,7 @@
   --pf-t--color--purple--50: #5e40be;
   --pf-t--color--purple--60: #3d2785;
   --pf-t--color--purple--70: #21134d;
+  --pf-t--color--purple--80: #1b0d33;
   --pf-t--color--red--10: #fce3e3;
   --pf-t--color--red--20: #fbc5c5;
   --pf-t--color--red--30: #f9a8a8;
@@ -49,6 +52,7 @@
   --pf-t--color--red--50: #ee0000;
   --pf-t--color--red--60: #a60000;
   --pf-t--color--red--70: #5f0000;
+  --pf-t--color--red--80: #3f0000;
   --pf-t--color--red-orange--10: #ffe3d9;
   --pf-t--color--red-orange--20: #fbbea8;
   --pf-t--color--red-orange--30: #f89b78;
@@ -63,6 +67,7 @@
   --pf-t--color--teal--50: #37a3a3;
   --pf-t--color--teal--60: #147878;
   --pf-t--color--teal--70: #004d4d;
+  --pf-t--color--teal--80: #003333;
   --pf-t--color--white: #ffffff;
   --pf-t--color--yellow--10: #fff4cc;
   --pf-t--color--yellow--20: #ffe072;
@@ -71,4 +76,5 @@
   --pf-t--color--yellow--50: #b98412;
   --pf-t--color--yellow--60: #96640f;
   --pf-t--color--yellow--70: #73480b;
+  --pf-t--color--yellow--80: #54330b;
 }
