--- a/src/patternfly/components/InputGroup/input-group.scss
+++ b/src/patternfly/components/InputGroup/input-group.scss
@@ -53,47 +53,43 @@
   display: flex;
   gap: var(--#{$input-group}--Gap);
   width: 100%;
-}
-  
-.#{$input-group}-expandable {
-  &:not(.pf-m-expanded) {
-    .#{$pf-prefix}c-search-input {
-      display: none;
-    }
-  }
 
-  .#{$pf-prefix}c-search-input {
-    width: 100%;
-    opacity: 0;
-    transition-timing-function: var(--#{$input-group}-expandable__search-input--TransitionTimingFunction--collapse);
-    transition-duration: var(--#{$input-group}-expandable__search-input--TransitionDuration--collapse);
-    transition-property: opacity, scale, display;
-    transition-behavior: allow-discrete;
-    transform-origin: var(--#{$input-group}-expandable__search-input--TransformOriginX) center;
-    scale: var(--#{$input-group}-expandable__search-input--ScaleX) 1;
-  }
-
-  &.pf-m-expand-left {
-    --#{$input-group}-expandable__search-input--TransformOriginX: var(--#{$input-group}-expandable__search-input--TransformOriginX--expand-left);
-  }
-  
-  &.pf-m-expanded {
-    .#{$pf-prefix}c-search-input {
-      opacity: 1;
-      transition-timing-function: var(--#{$input-group}-expandable__search-input--TransitionTimingFunction--expand);
-      transition-duration: var(--#{$input-group}-expandable__search-input--TransitionDuration--expand);
-      scale: 1 1; 
-    
-      @starting-style {
-        opacity: 0;
-        scale: var(--#{$input-group}-expandable__search-input--ScaleX) 1;
+  &.pf-m-search-input {
+    &:not(.pf-m-expanded) {
+      .pf-m-search-text-input {
+        width: 0;
+        visibility: hidden;
       }
     }
-          
-    .#{$input-group}__item {
-      animation-name: #{$input-group}-expandable-fade;
-      animation-duration: var(--#{$input-group}-expandable__button-icon--TransitionDuration--Opacity);
-      animation-timing-function: var(--#{$input-group}-expandable__button-icon--TransitionTimingFunction--Opacity);
+  
+    .pf-m-search-text-input {
+      width: 100%;
+      visibility: visible;
+      opacity: 0;
+      transition-timing-function: var(--#{$input-group}-expandable__search-input--TransitionTimingFunction--collapse);
+      transition-duration: var(--#{$input-group}-expandable__search-input--TransitionDuration--collapse);
+      transition-property: opacity, scale;
+      transform-origin: var(--#{$input-group}-expandable__search-input--TransformOriginX) center;
+      scale: var(--#{$input-group}-expandable__search-input--ScaleX) 1;
+    }
+  
+    &.pf-m-expand-left {
+      --#{$input-group}-expandable__search-input--TransformOriginX: var(--#{$input-group}-expandable__search-input--TransformOriginX--expand-left);
+    }
+    
+    &.pf-m-expanded {
+      .pf-m-search-text-input {
+        opacity: 1;
+        transition-timing-function: var(--#{$input-group}-expandable__search-input--TransitionTimingFunction--expand);
+        transition-duration: var(--#{$input-group}-expandable__search-input--TransitionDuration--expand);
+        scale: 1 1; 
+      }
+            
+      .#{$input-group}__item {
+        animation-name: #{$input-group}-expandable-fade;
+        animation-duration: var(--#{$input-group}-expandable__button-icon--TransitionDuration--Opacity);
+        animation-timing-function: var(--#{$input-group}-expandable__button-icon--TransitionTimingFunction--Opacity);
+      }
     }
   }
 }
