feat(button): move ripple to button background

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -23,18 +23,7 @@
   --#{$button}--TextDecorationColor: currentcolor;
   --#{$button}--TransitionDuration: var(--pf-t--global--motion--duration--fade--default);
   --#{$button}--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
-  --#{$button}--TransitionProperty: color, background-color, border-width, border-color, padding;
-
-  // Button click (ripple) effect
-  --#{$button}--before--Scale: 15000%;
-  --#{$button}--before--Opacity: 0;
-  --#{$button}--before--hover--Opacity: 0.12;
-  --#{$button}--before--TransitionDuration--scale: var(--pf-t--global--motion--duration--3xl);
-  --#{$button}--before--TransitionTimingFunction--scale: var(--pf-t--global--motion--timing-function--default);
-  --#{$button}--before--TransitionDuration--opacity: var(--pf-t--global--motion--duration--3xl);
-  --#{$button}--before--TransitionTimingFunction--opacity: var(--pf-t--global--motion--timing-function--default);
-  --#{$button}--before--active--TransitionDuration--scale: 0s;
-  --#{$button}--before--active--TransitionDuration--opacity: 0s;
+  --#{$button}--TransitionProperty: color, background, border-width, border-color;
 
   // Hover
   --#{$button}--hover--BackgroundColor: transparent;
@@ -336,7 +325,6 @@
   padding-block-end: var(--#{$button}--PaddingBlockEnd);
   padding-inline-start: var(--#{$button}--PaddingInlineStart);
   padding-inline-end: var(--#{$button}--PaddingInlineEnd);
-  overflow: hidden; // needed for ripple effect
   font-size: var(--#{$button}--FontSize, inherit);
   font-weight: var(--#{$button}--FontWeight, inherit);
   line-height: var(--#{$button}--LineHeight, inherit);
@@ -347,8 +335,11 @@
   text-decoration-color: var(--#{$button}--TextDecorationColor);
   white-space: nowrap;
   cursor: pointer; // needed for when a button does not use <button> - eg, <span>
+  // stylelint-disable property-no-vendor-prefix
+  -webkit-user-select: none;
   user-select: none;
-  background-color: var(--#{$button}--BackgroundColor);
+  // stylelint-ensable property-no-vendor-prefix
+  background: var(--#{$button}--BackgroundColor) radial-gradient(circle, transparent 1%, color-mix(in srgb, currentcolor 15%, transparent) 1%) center/15000%;
   border: 0;
   border-start-start-radius: var(--#{$button}--BorderStartStartRadius, var(--#{$button}--BorderRadius));
   border-start-end-radius: var(--#{$button}--BorderStartEndRadius, var(--#{$button}--BorderRadius));
@@ -367,21 +358,6 @@
     border-color: var(--#{$button}--BorderColor);
     border-radius: inherit;
     transition: inherit;
-  }
-
-  // Click effect (ripple) pseudo-element
-  // The pseudoelement expands from 0 (active state) to very large (default and hover state) so that the semi-transparent background gradient creates the ripple.
-  &::before {
-    position: absolute;
-    inset: 0;
-    pointer-events: none;
-    content: "";
-    background: radial-gradient(circle, transparent 1%, currentcolor 1%);
-    background-position: center;
-    border-radius: inherit;
-    opacity: var(--#{$button}--before--Opacity);
-    transition: scale var(--#{$button}--before--TransitionDuration--scale) var(--#{$button}--before--TransitionTimingFunction--scale), opacity var(--#{$button}--before--TransitionDuration--opacity) var(--#{$button}--before--TransitionTimingFunction--opacity);
-    scale: var(--#{$button}--before--Scale);
   }
 
   // Primary
@@ -462,8 +438,6 @@
     --#{$button}--m-small--PaddingInlineStart: var(--#{$button}--m-link--m-small--PaddingInlineStart);
 
     &.pf-m-inline {
-      --#{$button}--before--TransitionDuration--scale: 0; // don't show the ripple effect for inline links
-
       @at-root span#{&} {
         --#{$button}--m-link--m-inline--Display: var(--#{$button}--span--m-link--m-inline--Display);
         --#{$button}__icon--m-start--MarginInlineEnd: var(--#{$button}--span--m-link--m-inline__icon--m-start--MarginInlineEnd);
@@ -499,6 +473,7 @@
 
       text-align: start;
       white-space: normal;
+      background: transparent; // don't show the ripple effect for inline links
       outline-offset: #{pf-size-prem(2px)};
     }
 
@@ -646,6 +621,7 @@
       --#{$button}--m-small--PaddingInlineStart: var(--#{$button}--m-plain--m-no-padding--m-small--PaddingInlineStart);
   
       min-width: var(--#{$button}--m-plain--m-no-padding--MinWidth);
+      background: var(--#{$button}--BackgroundColor); // override the ripple background
     }
   }
 
@@ -698,8 +674,6 @@
     --#{$button}--BorderWidth: var(--#{$button}--hover--BorderWidth);
     --#{$button}--m-plain--m-no-padding__icon--Color: var(--#{$button}--m-plain--m-no-padding--hover__icon--Color);
     --#{$button}__icon--Color: var(--#{$button}--hover__icon--Color);
-    --#{$button}--before--Opacity: var(--#{$button}--before--hover--Opacity);
-    --#{$button}--before--Scale: 15000%;
 
     text-decoration-line: var(--#{$button}--hover--TextDecorationLine);
     text-decoration-style: var(--#{$button}--hover--TextDecorationStyle);
@@ -713,11 +687,9 @@
     --#{$button}--BorderWidth: var(--#{$button}--m-clicked--BorderWidth);
     --#{$button}--BorderColor: var(--#{$button}--m-clicked--BorderColor);
     --#{$button}__icon--Color: var(--#{$button}--m-clicked__icon--Color);
-    --#{$button}--before--Scale: 0;
 
-    &::before {
-      transition: scale var(--#{$button}--before--active--TransitionDuration--scale) var(--#{$button}--before--TransitionTimingFunction--scale), opacity var(--#{$button}--before--active--TransitionDuration--opacity) var(--#{$button}--before--TransitionTimingFunction--opacity);
-    }
+    background-size: 100%; // apply the background surface for ripple
+    transition-duration: 0s; // transition immediately
   }
 
   // Disabled buttons
@@ -732,7 +704,7 @@
   &.pf-m-aria-disabled {
     color: var(--#{$button}--disabled--Color);
     text-decoration-color: var(--#{$button}--disabled--TextDecorationColor);
-    background-color: var(--#{$button}--disabled--BackgroundColor);
+    background: var(--#{$button}--disabled--BackgroundColor);
 
     &::after {
       border-color: transparent;
