--- a/src/patternfly/components/Masthead/masthead-toggle.hbs
+++ b/src/patternfly/components/Masthead/masthead-toggle.hbs
@@ -5,6 +5,6 @@
   {{#if @partial-block}}
     {{> @partial-block}}
   {{else}}
-    {{> button button--IsPlain=true button--icon="bars" button--IsIcon=true button--aria-label="Global navigation"}}
+    {{> button button--IsHamburger=true button--IsPlain=true button--IsIcon=true button--aria-label="Global navigation"}}
   {{/if}}
 </span>
