--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -133,7 +133,7 @@
       @include pf-v6-animate-danger-jiggle;
     }
     
-    .pf-m-status {
+    .#{$text-input-group}__icon.pf-m-status {
       @include pf-v6-fade-default(#{$text-input-group}, pf-v6-global-fade-in);
     }
   }
