--- a/src/patternfly/components/Table/table-expandable-row-content.hbs
+++ b/src/patternfly/components/Table/table-expandable-row-content.hbs
@@ -1,4 +1,8 @@
-<div class="{{pfv}}table__expandable-row-content{{#if table-expandable-row-content--modifier}} {{table-expandable-row-content--modifier}}{{/if}}"
+<div class="{{pfv}}table__expandable-row-content
+  {{setModifiers
+    table-expandable-row-content--HasNoBackground="pf-m-no-background"
+    table-expandable-row-content--modifier=table-expandable-row-content--modifier
+  }}"
   {{#if table-expandable-row-content--attribute}}
     {{{table-expandable-row-content--attribute}}}
   {{/if}}>
