chore(fade-in): use fixed animation name for fade-in

--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -295,7 +295,7 @@
     }
 
     .#{$form-control}__icon.pf-m-status {
-      @include pf-v6-fade-default(#{$form-control}, pf-v6-global-fade-in);
+      @include pf-v6-fade-default(#{$form-control});
     }
 
     > textarea {
