--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -134,7 +134,7 @@
     }
     
     .#{$text-input-group}__icon.pf-m-status {
-      @include pf-v6-fade-default(#{$text-input-group}, pf-v6-global-fade-in);
+      @include pf-v6-fade-default(#{$text-input-group});
     }
   }
   
